# iter_from_fn

./: Cargo.toml  README.md
src/: lib.rs
