[package]
name = "iter_from_fn"
version = "1.0.0"
authors = ["mocoma <mocomaminecraft@gmail.com>"]
edition = "2018"

description = "Create iterator from repeatedly aplying a function that takes no parameters"
license = "MIT"
repository = "https://github.com/mocomaminecraft/iter_from_fn"

[dependencies]
